Fixed text placement issue in quiz results
Fixed an issue where text was placed too high and not evenly in the center

--- a/kuuztu/css/app.css
+++ b/kuuztu/css/app.css
@@ -89,7 +89,7 @@ p {
 
 .box-results {
     width: 100%;
-    height: 70%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
